# rp2040-async-i2c

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: build_and_test.yml
.vim/: coc-settings.json
examples/: pico_i2c.rs  pico_i2c_pio.rs
src/: i2c.rs  lib.rs  pio.rs
