[package]
name = "rp2040-async-i2c"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = { version = "0.9.2" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
i2c-write-iter = { version = "1.0.0", features = ["async"] }
fugit = "0.3.6"
pio = { version = "0.2" }
pio-proc = { version = "0.2" }

[dev-dependencies]
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
rp-pico = { version = "0.8.0", features = ["rt"] }
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nostd_async = { version = "0.6.0", features = ["cortex_m"] }

[[example]]
name = "pico_i2c_pio"
